--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@octokit/types": "^6.3.1",
     "@types/dotenv": "^8.2.0",
     "@types/google-spreadsheet": "^3.0.2",
+    "@types/node-cron": "^2.0.3",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^39.2.0",
-    "json-schema-to-typescript": "^10.1.3"
+    "json-schema-to-typescript": "^10.1.3",
+    "node-cron": "^2.0.3"
   }
 }
