--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "module": "commonjs",
-    "lib": ["es6"],
+    "lib": ["esnext"],
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
